--- a/randoms/templates/randoms/base.html
+++ b/randoms/templates/randoms/base.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Marvel Rivals Hero Randomizer</h1>
 
-{% block content%} {% endblock content %}
+{% block content%} 
+{% endblock %}
 
 </body>
 </html>
