should show one of 2 optons

--- a/randoms/templates/randoms/randhero.html
+++ b/randoms/templates/randoms/randhero.html
@@ -3,11 +3,9 @@
 {% block content %}
     <h1>heros</h1>
     <ul>
-        {% for hero in heroes %}
-            <li>{{hero.name}}
-                <img src="{{hero.image}}" alt="">
-            </li>
 
-        {% endfor %}
+            <li>{{hero.name}}
+                <img src="{{hero.images}}" alt="">
+            </li>
     </ul>
 {% endblock %}
